Update from https://github.com/thebesttv/eserver-static/commit/0c2a5c0ed1c094f3686880867c3dee8430ff507e

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-03 08:43 -->
+<!-- 2022-10-03 11:11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -34,19 +34,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org173e320">1. 暑假</a>
+<li><a href="#orgb7c898c">1. 暑假</a>
 <ul>
-<li><a href="#org2cad550">1.1. 夏令营</a></li>
+<li><a href="#orgf4f8426">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgc142610">2. 打工</a></li>
-<li><a href="#org6b2d385">3. 我的928</a>
+<li><a href="#orgadc68c7">2. 打工</a></li>
+<li><a href="#orgb97e115">3. 我的928</a>
 <ul>
-<li><a href="#org151959f">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org5602378">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org0b082b4">4. 他们的928</a></li>
-<li><a href="#org0da1d9b">5. 总结</a></li>
+<li><a href="#org818d7be">4. 他们的928</a></li>
+<li><a href="#org15b23c5">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -56,7 +56,7 @@
 </p>
 
 
-<figure id="orga1bd457">
+<figure id="orgfe2a965">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -79,8 +79,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org173e320" class="outline-2">
-<h2 id="org173e320"><span class="section-number-2">1.</span> <a href="#org173e320">暑假</a></h2>
+<div id="outline-container-orgb7c898c" class="outline-2">
+<h2 id="orgb7c898c"><span class="section-number-2">1.</span> <a href="#orgb7c898c">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -104,8 +104,8 @@
 </p>
 </div>
 
-<div id="outline-container-org2cad550" class="outline-3">
-<h3 id="org2cad550"><span class="section-number-3">1.1.</span> <a href="#org2cad550">夏令营</a></h3>
+<div id="outline-container-orgf4f8426" class="outline-3">
+<h3 id="orgf4f8426"><span class="section-number-3">1.1.</span> <a href="#orgf4f8426">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -147,8 +147,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc142610" class="outline-2">
-<h2 id="orgc142610"><span class="section-number-2">2.</span> <a href="#orgc142610">打工</a></h2>
+<div id="outline-container-orgadc68c7" class="outline-2">
+<h2 id="orgadc68c7"><span class="section-number-2">2.</span> <a href="#orgadc68c7">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -162,8 +162,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org6b2d385" class="outline-2">
-<h2 id="org6b2d385"><span class="section-number-2">3.</span> <a href="#org6b2d385">我的928</a></h2>
+<div id="outline-container-orgb97e115" class="outline-2">
+<h2 id="orgb97e115"><span class="section-number-2">3.</span> <a href="#orgb97e115">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -179,8 +179,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org151959f" class="outline-3">
-<h3 id="org151959f"><span class="section-number-3">3.1.</span> <a href="#org151959f">928演唱会(bushi</a></h3>
+<div id="outline-container-org5602378" class="outline-3">
+<h3 id="org5602378"><span class="section-number-3">3.1.</span> <a href="#org5602378">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -188,7 +188,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org6ada48a">
+<figure id="orgefbd21b">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgb4f21da">
+<figure id="orgb37854c">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -213,8 +213,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org0b082b4" class="outline-2">
-<h2 id="org0b082b4"><span class="section-number-2">4.</span> <a href="#org0b082b4">他们的928</a></h2>
+<div id="outline-container-org818d7be" class="outline-2">
+<h2 id="org818d7be"><span class="section-number-2">4.</span> <a href="#org818d7be">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -234,8 +234,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org0da1d9b" class="outline-2">
-<h2 id="org0da1d9b"><span class="section-number-2">5.</span> <a href="#org0da1d9b">总结</a></h2>
+<div id="outline-container-org15b23c5" class="outline-2">
+<h2 id="org15b23c5"><span class="section-number-2">5.</span> <a href="#org15b23c5">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -250,7 +250,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-03 08:43</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-03 11:11</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
