--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-03 11:11 -->
+<!-- 2022-10-03 16:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,46 +33,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org704d67d">1. 妙妙文章</a>
+<li><a href="#org7ac4c1d">1. 妙妙文章</a>
 <ul>
-<li><a href="#orge816a00">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org5864d7a">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgf9e3f9b">1.3. 关于编辑器</a></li>
-<li><a href="#org2693343">1.4. 关于代码</a></li>
-<li><a href="#org17c1b8d">1.5. 关于CPU</a>
+<li><a href="#org426732b">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org28f06b7">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgdbb27cb">1.3. 关于编辑器</a></li>
+<li><a href="#orgb4512ea">1.4. 关于代码</a></li>
+<li><a href="#orgf3dc4c1">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgb1f41bd">1.5.1. Lisp</a></li>
+<li><a href="#orgbc47848">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org7274256">1.6. 关于算法</a>
+<li><a href="#org04e7efc">1.6. 关于算法</a>
 <ul>
-<li><a href="#org8bdcf29">1.6.1. 关于随机</a></li>
+<li><a href="#org45eb357">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org1dc17a3">1.7. 关于AI</a></li>
-<li><a href="#orgf9f2323">1.8. 关于软件</a>
+<li><a href="#orge5f93d7">1.7. 关于AI</a></li>
+<li><a href="#orga4c9d35">1.8. 关于软件</a>
 <ul>
-<li><a href="#org00d376c">1.8.1. SQLite</a></li>
+<li><a href="#orgbb06171">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgb7787e3">1.9. 关于workflow</a></li>
+<li><a href="#org41d1857">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org3aba6b4">2. 棒棒视频</a>
+<li><a href="#org227f428">2. 棒棒视频</a>
 <ul>
-<li><a href="#org1125058">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org8f546da">2.2. 各种剧</a></li>
-<li><a href="#orgb8b9d6c">2.3. 电影</a></li>
+<li><a href="#orga6ccedd">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org657b239">2.2. 各种剧</a></li>
+<li><a href="#org6081d89">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgeaa4f17">3. 快乐游戏</a></li>
-<li><a href="#org7449627">4. 宝藏博主</a></li>
-<li><a href="#orgf32381c">5. 有意思的</a>
+<li><a href="#org28bcbd2">3. 快乐游戏</a></li>
+<li><a href="#org92ae092">4. 宝藏博主</a></li>
+<li><a href="#org709c6c4">5. 有意思的</a>
 <ul>
-<li><a href="#org9d2e2a3">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org32fef5b">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org2f9a25c">6. 我想玩的</a></li>
+<li><a href="#org1aab0c5">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -81,8 +81,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org704d67d" class="outline-2">
-<h2 id="org704d67d"><span class="section-number-2">1.</span> <a href="#org704d67d">妙妙文章</a></h2>
+<div id="outline-container-org7ac4c1d" class="outline-2">
+<h2 id="org7ac4c1d"><span class="section-number-2">1.</span> <a href="#org7ac4c1d">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -440,7 +440,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orga8df9ea">
+<figure id="org1199008">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -503,8 +503,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orge816a00" class="outline-3">
-<h3 id="orge816a00"><span class="section-number-3">1.1.</span> <a href="#orge816a00">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org426732b" class="outline-3">
+<h3 id="org426732b"><span class="section-number-3">1.1.</span> <a href="#org426732b">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -534,8 +534,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org5864d7a" class="outline-3">
-<h3 id="org5864d7a"><span class="section-number-3">1.2.</span> <a href="#org5864d7a">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org28f06b7" class="outline-3">
+<h3 id="org28f06b7"><span class="section-number-3">1.2.</span> <a href="#org28f06b7">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -569,8 +569,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgf9e3f9b" class="outline-3">
-<h3 id="orgf9e3f9b"><span class="section-number-3">1.3.</span> <a href="#orgf9e3f9b">关于编辑器</a></h3>
+<div id="outline-container-orgdbb27cb" class="outline-3">
+<h3 id="orgdbb27cb"><span class="section-number-3">1.3.</span> <a href="#orgdbb27cb">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -586,8 +586,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org2693343" class="outline-3">
-<h3 id="org2693343"><span class="section-number-3">1.4.</span> <a href="#org2693343">关于代码</a></h3>
+<div id="outline-container-orgb4512ea" class="outline-3">
+<h3 id="orgb4512ea"><span class="section-number-3">1.4.</span> <a href="#orgb4512ea">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -613,8 +613,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org17c1b8d" class="outline-3">
-<h3 id="org17c1b8d"><span class="section-number-3">1.5.</span> <a href="#org17c1b8d">关于CPU</a></h3>
+<div id="outline-container-orgf3dc4c1" class="outline-3">
+<h3 id="orgf3dc4c1"><span class="section-number-3">1.5.</span> <a href="#orgf3dc4c1">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -628,8 +628,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgb1f41bd" class="outline-4">
-<h4 id="orgb1f41bd"><span class="section-number-4">1.5.1.</span> <a href="#orgb1f41bd">Lisp</a></h4>
+<div id="outline-container-orgbc47848" class="outline-4">
+<h4 id="orgbc47848"><span class="section-number-4">1.5.1.</span> <a href="#orgbc47848">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -652,8 +652,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org7274256" class="outline-3">
-<h3 id="org7274256"><span class="section-number-3">1.6.</span> <a href="#org7274256">关于算法</a></h3>
+<div id="outline-container-org04e7efc" class="outline-3">
+<h3 id="org04e7efc"><span class="section-number-3">1.6.</span> <a href="#org04e7efc">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -672,8 +672,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org8bdcf29" class="outline-4">
-<h4 id="org8bdcf29"><span class="section-number-4">1.6.1.</span> <a href="#org8bdcf29">关于随机</a></h4>
+<div id="outline-container-org45eb357" class="outline-4">
+<h4 id="org45eb357"><span class="section-number-4">1.6.1.</span> <a href="#org45eb357">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -687,8 +687,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org1dc17a3" class="outline-3">
-<h3 id="org1dc17a3"><span class="section-number-3">1.7.</span> <a href="#org1dc17a3">关于AI</a></h3>
+<div id="outline-container-orge5f93d7" class="outline-3">
+<h3 id="orge5f93d7"><span class="section-number-3">1.7.</span> <a href="#orge5f93d7">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -698,8 +698,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf9f2323" class="outline-3">
-<h3 id="orgf9f2323"><span class="section-number-3">1.8.</span> <a href="#orgf9f2323">关于软件</a></h3>
+<div id="outline-container-orga4c9d35" class="outline-3">
+<h3 id="orga4c9d35"><span class="section-number-3">1.8.</span> <a href="#orga4c9d35">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -710,8 +710,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org00d376c" class="outline-4">
-<h4 id="org00d376c"><span class="section-number-4">1.8.1.</span> <a href="#org00d376c">SQLite</a></h4>
+<div id="outline-container-orgbb06171" class="outline-4">
+<h4 id="orgbb06171"><span class="section-number-4">1.8.1.</span> <a href="#orgbb06171">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -725,8 +725,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb7787e3" class="outline-3">
-<h3 id="orgb7787e3"><span class="section-number-3">1.9.</span> <a href="#orgb7787e3">关于workflow</a></h3>
+<div id="outline-container-org41d1857" class="outline-3">
+<h3 id="org41d1857"><span class="section-number-3">1.9.</span> <a href="#org41d1857">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -736,8 +736,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3aba6b4" class="outline-2">
-<h2 id="org3aba6b4"><span class="section-number-2">2.</span> <a href="#org3aba6b4">棒棒视频</a></h2>
+<div id="outline-container-org227f428" class="outline-2">
+<h2 id="org227f428"><span class="section-number-2">2.</span> <a href="#org227f428">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -780,24 +780,24 @@ Practical, but also works on the human level in this case.
 &#x2014;<a href="https://www.youtube.com/channel/UCzdQOZVPcWHrceRZ7jdpZaQ">GhostSamurai</a>
 </p>
 </blockquote></li>
-<li><a href="https://www.bilibili.com/festival/capsules?bvid=BV1mP411G75r">Bilibili 胶囊计划 第一届</a>
+<li><a href="https://space.bilibili.com/480229228/channel/collectiondetail?sid=682536">Bilibili 胶囊计划 第一届</a>
 <ul class="org-ul">
 <li><p>
-《终极体验》：你有欲望与自我拉扯撕裂的体验吗？
+<a href="https://www.bilibili.com/video/BV1S24y1Z7aA">《终极体验》：你有欲望与自我拉扯撕裂的体验吗？</a>
 </p>
 
 <p>
 感官分享有点像大刘的《带上她的眼睛》
 </p></li>
 <li><p>
-《癔症》：童年噩梦
+<a href="https://www.bilibili.com/video/BV1ht4y1j7HN">《癔症》：童年噩梦</a>
 </p>
 
 <p>
 结尾看到&ldquo;声音片段取材自真实录音&rdquo;惊了
 </p></li>
 <li><p>
-《界》：一界之隔，人神皆非！
+<a href="https://www.bilibili.com/video/BV1ae4y187wg">《界》：一界之隔，人神皆非！</a>
 </p>
 
 <p>
@@ -807,8 +807,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org1125058" class="outline-3">
-<h3 id="org1125058"><span class="section-number-3">2.1.</span> <a href="#org1125058">Veritasium 真理元素</a></h3>
+<div id="outline-container-orga6ccedd" class="outline-3">
+<h3 id="orga6ccedd"><span class="section-number-3">2.1.</span> <a href="#orga6ccedd">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -833,8 +833,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8f546da" class="outline-3">
-<h3 id="org8f546da"><span class="section-number-3">2.2.</span> <a href="#org8f546da">各种剧</a></h3>
+<div id="outline-container-org657b239" class="outline-3">
+<h3 id="org657b239"><span class="section-number-3">2.2.</span> <a href="#org657b239">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -857,8 +857,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb8b9d6c" class="outline-3">
-<h3 id="orgb8b9d6c"><span class="section-number-3">2.3.</span> <a href="#orgb8b9d6c">电影</a></h3>
+<div id="outline-container-org6081d89" class="outline-3">
+<h3 id="org6081d89"><span class="section-number-3">2.3.</span> <a href="#org6081d89">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgeaa4f17" class="outline-2">
-<h2 id="orgeaa4f17"><span class="section-number-2">3.</span> <a href="#orgeaa4f17">快乐游戏</a></h2>
+<div id="outline-container-org28bcbd2" class="outline-2">
+<h2 id="org28bcbd2"><span class="section-number-2">3.</span> <a href="#org28bcbd2">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7449627" class="outline-2">
-<h2 id="org7449627"><span class="section-number-2">4.</span> <a href="#org7449627">宝藏博主</a></h2>
+<div id="outline-container-org92ae092" class="outline-2">
+<h2 id="org92ae092"><span class="section-number-2">4.</span> <a href="#org92ae092">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -925,7 +925,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org1557ada">
+<figure id="org0a65edb">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -933,8 +933,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf32381c" class="outline-2">
-<h2 id="orgf32381c"><span class="section-number-2">5.</span> <a href="#orgf32381c">有意思的</a></h2>
+<div id="outline-container-org709c6c4" class="outline-2">
+<h2 id="org709c6c4"><span class="section-number-2">5.</span> <a href="#org709c6c4">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -958,8 +958,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org9d2e2a3" class="outline-3">
-<h3 id="org9d2e2a3"><span class="section-number-3">5.1.</span> <a href="#org9d2e2a3">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org32fef5b" class="outline-3">
+<h3 id="org32fef5b"><span class="section-number-3">5.1.</span> <a href="#org32fef5b">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -971,8 +971,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org2f9a25c" class="outline-2">
-<h2 id="org2f9a25c"><span class="section-number-2">6.</span> <a href="#org2f9a25c">我想玩的</a></h2>
+<div id="outline-container-org1aab0c5" class="outline-2">
+<h2 id="org1aab0c5"><span class="section-number-2">6.</span> <a href="#org1aab0c5">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -994,8 +994,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-03 10:52</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-03 11:11</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-03 16:54</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-03 16:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
