Update from https://github.com/thebesttv/eserver-static/commit/5f2e89fe7605aac9d1252286e6539295a7b02b45

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-04 20:47 -->
+<!-- 2022-10-05 03:02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org50a0cac">1. 妙妙文章</a>
+<li><a href="#org1d01bce">1. 妙妙文章</a>
 <ul>
-<li><a href="#org8b84895">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org65ce91c">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org2486a3b">1.3. 关于编辑器</a></li>
-<li><a href="#orgfebb764">1.4. 关于代码</a></li>
-<li><a href="#org1d14427">1.5. 关于CPU</a>
+<li><a href="#org34fbd62">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org7fc4812">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org6e356bb">1.3. 关于编辑器</a></li>
+<li><a href="#org591aebb">1.4. 关于代码</a></li>
+<li><a href="#org294d4e8">1.5. 关于CPU</a>
 <ul>
-<li><a href="#org58039e2">1.5.1. Lisp</a></li>
+<li><a href="#org18a3619">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org3e47923">1.6. 关于算法</a>
+<li><a href="#orga105327">1.6. 关于算法</a>
 <ul>
-<li><a href="#org196dc25">1.6.1. 关于随机</a></li>
+<li><a href="#org629c6b1">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org41ef579">1.7. 关于AI</a></li>
-<li><a href="#orgcf6639b">1.8. 关于软件</a>
+<li><a href="#org9cacd84">1.7. 关于AI</a></li>
+<li><a href="#orgfbc95cf">1.8. 关于软件</a>
 <ul>
-<li><a href="#orgabab17d">1.8.1. SQLite</a></li>
+<li><a href="#org69bb8a4">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org747870d">1.9. 关于workflow</a></li>
+<li><a href="#org1abc8ff">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org497569d">2. 棒棒视频</a>
+<li><a href="#org27a30d8">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgf8a8560">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org26646a3">2.2. 各种剧</a></li>
-<li><a href="#orgc71ad78">2.3. 电影</a></li>
+<li><a href="#org142d07c">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgfd06ea4">2.2. 各种剧</a></li>
+<li><a href="#org93bd6fa">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orge2edef8">3. 快乐游戏</a></li>
-<li><a href="#org88d28c9">4. 宝藏博主</a></li>
-<li><a href="#org820b984">5. 有意思的</a>
+<li><a href="#org6ace761">3. 快乐游戏</a></li>
+<li><a href="#org1daaf3c">4. 宝藏博主</a></li>
+<li><a href="#orgbdfed08">5. 有意思的</a>
 <ul>
-<li><a href="#org35d2609">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org0e11ecb">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orga1f2aa8">6. 我想玩的</a></li>
+<li><a href="#org9b0f6c2">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org50a0cac" class="outline-2">
-<h2 id="org50a0cac"><span class="section-number-2">1.</span> <a href="#org50a0cac">妙妙文章</a></h2>
+<div id="outline-container-org1d01bce" class="outline-2">
+<h2 id="org1d01bce"><span class="section-number-2">1.</span> <a href="#org1d01bce">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org6ae47fb">
+<figure id="orga84c9c3">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org8b84895" class="outline-3">
-<h3 id="org8b84895"><span class="section-number-3">1.1.</span> <a href="#org8b84895">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org34fbd62" class="outline-3">
+<h3 id="org34fbd62"><span class="section-number-3">1.1.</span> <a href="#org34fbd62">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org65ce91c" class="outline-3">
-<h3 id="org65ce91c"><span class="section-number-3">1.2.</span> <a href="#org65ce91c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org7fc4812" class="outline-3">
+<h3 id="org7fc4812"><span class="section-number-3">1.2.</span> <a href="#org7fc4812">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org2486a3b" class="outline-3">
-<h3 id="org2486a3b"><span class="section-number-3">1.3.</span> <a href="#org2486a3b">关于编辑器</a></h3>
+<div id="outline-container-org6e356bb" class="outline-3">
+<h3 id="org6e356bb"><span class="section-number-3">1.3.</span> <a href="#org6e356bb">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgfebb764" class="outline-3">
-<h3 id="orgfebb764"><span class="section-number-3">1.4.</span> <a href="#orgfebb764">关于代码</a></h3>
+<div id="outline-container-org591aebb" class="outline-3">
+<h3 id="org591aebb"><span class="section-number-3">1.4.</span> <a href="#org591aebb">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -616,8 +616,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org1d14427" class="outline-3">
-<h3 id="org1d14427"><span class="section-number-3">1.5.</span> <a href="#org1d14427">关于CPU</a></h3>
+<div id="outline-container-org294d4e8" class="outline-3">
+<h3 id="org294d4e8"><span class="section-number-3">1.5.</span> <a href="#org294d4e8">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -631,8 +631,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-org58039e2" class="outline-4">
-<h4 id="org58039e2"><span class="section-number-4">1.5.1.</span> <a href="#org58039e2">Lisp</a></h4>
+<div id="outline-container-org18a3619" class="outline-4">
+<h4 id="org18a3619"><span class="section-number-4">1.5.1.</span> <a href="#org18a3619">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -655,8 +655,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org3e47923" class="outline-3">
-<h3 id="org3e47923"><span class="section-number-3">1.6.</span> <a href="#org3e47923">关于算法</a></h3>
+<div id="outline-container-orga105327" class="outline-3">
+<h3 id="orga105327"><span class="section-number-3">1.6.</span> <a href="#orga105327">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org196dc25" class="outline-4">
-<h4 id="org196dc25"><span class="section-number-4">1.6.1.</span> <a href="#org196dc25">关于随机</a></h4>
+<div id="outline-container-org629c6b1" class="outline-4">
+<h4 id="org629c6b1"><span class="section-number-4">1.6.1.</span> <a href="#org629c6b1">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org41ef579" class="outline-3">
-<h3 id="org41ef579"><span class="section-number-3">1.7.</span> <a href="#org41ef579">关于AI</a></h3>
+<div id="outline-container-org9cacd84" class="outline-3">
+<h3 id="org9cacd84"><span class="section-number-3">1.7.</span> <a href="#org9cacd84">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcf6639b" class="outline-3">
-<h3 id="orgcf6639b"><span class="section-number-3">1.8.</span> <a href="#orgcf6639b">关于软件</a></h3>
+<div id="outline-container-orgfbc95cf" class="outline-3">
+<h3 id="orgfbc95cf"><span class="section-number-3">1.8.</span> <a href="#orgfbc95cf">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgabab17d" class="outline-4">
-<h4 id="orgabab17d"><span class="section-number-4">1.8.1.</span> <a href="#orgabab17d">SQLite</a></h4>
+<div id="outline-container-org69bb8a4" class="outline-4">
+<h4 id="org69bb8a4"><span class="section-number-4">1.8.1.</span> <a href="#org69bb8a4">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org747870d" class="outline-3">
-<h3 id="org747870d"><span class="section-number-3">1.9.</span> <a href="#org747870d">关于workflow</a></h3>
+<div id="outline-container-org1abc8ff" class="outline-3">
+<h3 id="org1abc8ff"><span class="section-number-3">1.9.</span> <a href="#org1abc8ff">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org497569d" class="outline-2">
-<h2 id="org497569d"><span class="section-number-2">2.</span> <a href="#org497569d">棒棒视频</a></h2>
+<div id="outline-container-org27a30d8" class="outline-2">
+<h2 id="org27a30d8"><span class="section-number-2">2.</span> <a href="#org27a30d8">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -810,8 +810,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgf8a8560" class="outline-3">
-<h3 id="orgf8a8560"><span class="section-number-3">2.1.</span> <a href="#orgf8a8560">Veritasium 真理元素</a></h3>
+<div id="outline-container-org142d07c" class="outline-3">
+<h3 id="org142d07c"><span class="section-number-3">2.1.</span> <a href="#org142d07c">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -836,8 +836,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org26646a3" class="outline-3">
-<h3 id="org26646a3"><span class="section-number-3">2.2.</span> <a href="#org26646a3">各种剧</a></h3>
+<div id="outline-container-orgfd06ea4" class="outline-3">
+<h3 id="orgfd06ea4"><span class="section-number-3">2.2.</span> <a href="#orgfd06ea4">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -860,8 +860,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc71ad78" class="outline-3">
-<h3 id="orgc71ad78"><span class="section-number-3">2.3.</span> <a href="#orgc71ad78">电影</a></h3>
+<div id="outline-container-org93bd6fa" class="outline-3">
+<h3 id="org93bd6fa"><span class="section-number-3">2.3.</span> <a href="#org93bd6fa">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -886,8 +886,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orge2edef8" class="outline-2">
-<h2 id="orge2edef8"><span class="section-number-2">3.</span> <a href="#orge2edef8">快乐游戏</a></h2>
+<div id="outline-container-org6ace761" class="outline-2">
+<h2 id="org6ace761"><span class="section-number-2">3.</span> <a href="#org6ace761">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -916,8 +916,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org88d28c9" class="outline-2">
-<h2 id="org88d28c9"><span class="section-number-2">4.</span> <a href="#org88d28c9">宝藏博主</a></h2>
+<div id="outline-container-org1daaf3c" class="outline-2">
+<h2 id="org1daaf3c"><span class="section-number-2">4.</span> <a href="#org1daaf3c">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -928,7 +928,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgea89007">
+<figure id="org45459cf">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -936,8 +936,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org820b984" class="outline-2">
-<h2 id="org820b984"><span class="section-number-2">5.</span> <a href="#org820b984">有意思的</a></h2>
+<div id="outline-container-orgbdfed08" class="outline-2">
+<h2 id="orgbdfed08"><span class="section-number-2">5.</span> <a href="#orgbdfed08">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -961,8 +961,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org35d2609" class="outline-3">
-<h3 id="org35d2609"><span class="section-number-3">5.1.</span> <a href="#org35d2609">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org0e11ecb" class="outline-3">
+<h3 id="org0e11ecb"><span class="section-number-3">5.1.</span> <a href="#org0e11ecb">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -974,8 +974,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orga1f2aa8" class="outline-2">
-<h2 id="orga1f2aa8"><span class="section-number-2">6.</span> <a href="#orga1f2aa8">我想玩的</a></h2>
+<div id="outline-container-org9b0f6c2" class="outline-2">
+<h2 id="org9b0f6c2"><span class="section-number-2">6.</span> <a href="#org9b0f6c2">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -998,7 +998,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-04 20:45</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 20:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-05 03:02</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
