Update from https://github.com/thebesttv/eserver-static/commit/a26f660be8bc6cc60de8bf8e80db108759504bad

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-09 02:54 -->
+<!-- 2022-10-09 22:56 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org13a744c">1. 暑假</a>
+<li><a href="#org875336b">1. 暑假</a>
 <ul>
-<li><a href="#orgb1a0134">1.1. 夏令营</a></li>
+<li><a href="#orgf27486a">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgf377cd5">2. 打工</a></li>
-<li><a href="#org6957a3e">3. 我的928</a>
+<li><a href="#orga55c4ae">2. 打工</a></li>
+<li><a href="#org1904e3e">3. 我的928</a>
 <ul>
-<li><a href="#orgc65bf97">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org5e8bb77">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org0b93562">4. 他们的928</a></li>
-<li><a href="#orge46116d">5. 总结</a></li>
+<li><a href="#org093d5ef">4. 他们的928</a></li>
+<li><a href="#org2d8c29c">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="orgd2c77a8">
+<figure id="orga1777b1">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org13a744c" class="outline-2">
-<h2 id="org13a744c"><span class="section-number-2">1.</span> <a href="#org13a744c">暑假</a></h2>
+<div id="outline-container-org875336b" class="outline-2">
+<h2 id="org875336b"><span class="section-number-2">1.</span> <a href="#org875336b">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgb1a0134" class="outline-3">
-<h3 id="orgb1a0134"><span class="section-number-3">1.1.</span> <a href="#orgb1a0134">夏令营</a></h3>
+<div id="outline-container-orgf27486a" class="outline-3">
+<h3 id="orgf27486a"><span class="section-number-3">1.1.</span> <a href="#orgf27486a">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf377cd5" class="outline-2">
-<h2 id="orgf377cd5"><span class="section-number-2">2.</span> <a href="#orgf377cd5">打工</a></h2>
+<div id="outline-container-orga55c4ae" class="outline-2">
+<h2 id="orga55c4ae"><span class="section-number-2">2.</span> <a href="#orga55c4ae">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org6957a3e" class="outline-2">
-<h2 id="org6957a3e"><span class="section-number-2">3.</span> <a href="#org6957a3e">我的928</a></h2>
+<div id="outline-container-org1904e3e" class="outline-2">
+<h2 id="org1904e3e"><span class="section-number-2">3.</span> <a href="#org1904e3e">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgc65bf97" class="outline-3">
-<h3 id="orgc65bf97"><span class="section-number-3">3.1.</span> <a href="#orgc65bf97">928演唱会(bushi</a></h3>
+<div id="outline-container-org5e8bb77" class="outline-3">
+<h3 id="org5e8bb77"><span class="section-number-3">3.1.</span> <a href="#org5e8bb77">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orge5640df">
+<figure id="orgf9ebe77">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgeaf5945">
+<figure id="org88a72c1">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org0b93562" class="outline-2">
-<h2 id="org0b93562"><span class="section-number-2">4.</span> <a href="#org0b93562">他们的928</a></h2>
+<div id="outline-container-org093d5ef" class="outline-2">
+<h2 id="org093d5ef"><span class="section-number-2">4.</span> <a href="#org093d5ef">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge46116d" class="outline-2">
-<h2 id="orge46116d"><span class="section-number-2">5.</span> <a href="#orge46116d">总结</a></h2>
+<div id="outline-container-org2d8c29c" class="outline-2">
+<h2 id="org2d8c29c"><span class="section-number-2">5.</span> <a href="#org2d8c29c">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-09 02:54</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-09 22:56</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
