--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-09 02:54 -->
+<!-- 2022-10-09 22:56 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga179c8c">1. 妙妙文章</a>
+<li><a href="#org078b422">1. 妙妙文章</a>
 <ul>
-<li><a href="#org7727c9b">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org6027949">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgb0c67c6">1.3. 关于编辑器</a></li>
-<li><a href="#orge80118e">1.4. 关于代码</a></li>
-<li><a href="#org160f0f2">1.5. 关于CPU</a>
+<li><a href="#orga4c1fee">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgbfb1924">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org71abcc5">1.3. 关于编辑器</a></li>
+<li><a href="#orga24c70b">1.4. 关于代码</a></li>
+<li><a href="#orgf10945c">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgd584d08">1.5.1. Lisp</a></li>
+<li><a href="#org0ea257c">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orga028d53">1.6. 关于算法</a>
+<li><a href="#org78c3639">1.6. 关于算法</a>
 <ul>
-<li><a href="#org3e74cf7">1.6.1. 关于随机</a></li>
+<li><a href="#orgd50e0d5">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org77afbb6">1.7. 关于AI</a></li>
-<li><a href="#orgc582eef">1.8. 关于软件</a>
+<li><a href="#org57c130d">1.7. 关于AI</a></li>
+<li><a href="#orgb2c631d">1.8. 关于软件</a>
 <ul>
-<li><a href="#org8343cb3">1.8.1. SQLite</a></li>
+<li><a href="#org35f8392">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org0e73957">1.9. 关于workflow</a></li>
+<li><a href="#orgd2e2e15">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgdaa9209">2. 棒棒视频</a>
+<li><a href="#org9eabf16">2. 棒棒视频</a>
 <ul>
-<li><a href="#org16b9453">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org03f5f0b">2.2. 各种剧</a></li>
-<li><a href="#org1c459f6">2.3. 电影</a></li>
+<li><a href="#org75f9d6b">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org574db01">2.2. 各种剧</a></li>
+<li><a href="#orgcf09de7">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org8e4e1d6">3. 快乐游戏</a></li>
-<li><a href="#org8406d9c">4. 宝藏博主</a></li>
-<li><a href="#orgf264ad9">5. 有意思的</a>
+<li><a href="#org7719407">3. 快乐游戏</a></li>
+<li><a href="#orgfa7d65b">4. 宝藏博主</a></li>
+<li><a href="#orga2f3d78">5. 有意思的</a>
 <ul>
-<li><a href="#orgb7d4bea">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgb29d88c">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org7974bcb">6. 我想玩的</a></li>
+<li><a href="#org3af2045">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orga179c8c" class="outline-2">
-<h2 id="orga179c8c"><span class="section-number-2">1.</span> <a href="#orga179c8c">妙妙文章</a></h2>
+<div id="outline-container-org078b422" class="outline-2">
+<h2 id="org078b422"><span class="section-number-2">1.</span> <a href="#org078b422">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgc2290c8">
+<figure id="orga0d9d6f">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org7727c9b" class="outline-3">
-<h3 id="org7727c9b"><span class="section-number-3">1.1.</span> <a href="#org7727c9b">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orga4c1fee" class="outline-3">
+<h3 id="orga4c1fee"><span class="section-number-3">1.1.</span> <a href="#orga4c1fee">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org6027949" class="outline-3">
-<h3 id="org6027949"><span class="section-number-3">1.2.</span> <a href="#org6027949">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgbfb1924" class="outline-3">
+<h3 id="orgbfb1924"><span class="section-number-3">1.2.</span> <a href="#orgbfb1924">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgb0c67c6" class="outline-3">
-<h3 id="orgb0c67c6"><span class="section-number-3">1.3.</span> <a href="#orgb0c67c6">关于编辑器</a></h3>
+<div id="outline-container-org71abcc5" class="outline-3">
+<h3 id="org71abcc5"><span class="section-number-3">1.3.</span> <a href="#org71abcc5">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orge80118e" class="outline-3">
-<h3 id="orge80118e"><span class="section-number-3">1.4.</span> <a href="#orge80118e">关于代码</a></h3>
+<div id="outline-container-orga24c70b" class="outline-3">
+<h3 id="orga24c70b"><span class="section-number-3">1.4.</span> <a href="#orga24c70b">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -616,8 +616,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org160f0f2" class="outline-3">
-<h3 id="org160f0f2"><span class="section-number-3">1.5.</span> <a href="#org160f0f2">关于CPU</a></h3>
+<div id="outline-container-orgf10945c" class="outline-3">
+<h3 id="orgf10945c"><span class="section-number-3">1.5.</span> <a href="#orgf10945c">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -631,8 +631,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgd584d08" class="outline-4">
-<h4 id="orgd584d08"><span class="section-number-4">1.5.1.</span> <a href="#orgd584d08">Lisp</a></h4>
+<div id="outline-container-org0ea257c" class="outline-4">
+<h4 id="org0ea257c"><span class="section-number-4">1.5.1.</span> <a href="#org0ea257c">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -655,8 +655,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orga028d53" class="outline-3">
-<h3 id="orga028d53"><span class="section-number-3">1.6.</span> <a href="#orga028d53">关于算法</a></h3>
+<div id="outline-container-org78c3639" class="outline-3">
+<h3 id="org78c3639"><span class="section-number-3">1.6.</span> <a href="#org78c3639">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org3e74cf7" class="outline-4">
-<h4 id="org3e74cf7"><span class="section-number-4">1.6.1.</span> <a href="#org3e74cf7">关于随机</a></h4>
+<div id="outline-container-orgd50e0d5" class="outline-4">
+<h4 id="orgd50e0d5"><span class="section-number-4">1.6.1.</span> <a href="#orgd50e0d5">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org77afbb6" class="outline-3">
-<h3 id="org77afbb6"><span class="section-number-3">1.7.</span> <a href="#org77afbb6">关于AI</a></h3>
+<div id="outline-container-org57c130d" class="outline-3">
+<h3 id="org57c130d"><span class="section-number-3">1.7.</span> <a href="#org57c130d">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc582eef" class="outline-3">
-<h3 id="orgc582eef"><span class="section-number-3">1.8.</span> <a href="#orgc582eef">关于软件</a></h3>
+<div id="outline-container-orgb2c631d" class="outline-3">
+<h3 id="orgb2c631d"><span class="section-number-3">1.8.</span> <a href="#orgb2c631d">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org8343cb3" class="outline-4">
-<h4 id="org8343cb3"><span class="section-number-4">1.8.1.</span> <a href="#org8343cb3">SQLite</a></h4>
+<div id="outline-container-org35f8392" class="outline-4">
+<h4 id="org35f8392"><span class="section-number-4">1.8.1.</span> <a href="#org35f8392">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org0e73957" class="outline-3">
-<h3 id="org0e73957"><span class="section-number-3">1.9.</span> <a href="#org0e73957">关于workflow</a></h3>
+<div id="outline-container-orgd2e2e15" class="outline-3">
+<h3 id="orgd2e2e15"><span class="section-number-3">1.9.</span> <a href="#orgd2e2e15">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgdaa9209" class="outline-2">
-<h2 id="orgdaa9209"><span class="section-number-2">2.</span> <a href="#orgdaa9209">棒棒视频</a></h2>
+<div id="outline-container-org9eabf16" class="outline-2">
+<h2 id="org9eabf16"><span class="section-number-2">2.</span> <a href="#org9eabf16">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -790,11 +790,13 @@ Practical, but also works on the human level in this case.
 <li><a href="https://www.bilibili.com/video/BV1ae4y187wg">《界》：一界之隔，人神皆非！</a> 好看, 就是字闪得太快了, 看不清&#x2026;</li>
 <li><a href="https://b23.tv/etM5HXb">《齐日迈》：迈一步，即深渊？</a> 战胜自己</li>
 </ul></li>
+<li><a href="https://www.bilibili.com/video/BV1p14y1h7uL">充电宝宇宙，漫威看了都说牛【值不值得买第571期】</a> 为醋包饺子的典范,
+把充电宝当成五号电池用, 就是性价比太低了</li>
 </ul>
 </div>
 
-<div id="outline-container-org16b9453" class="outline-3">
-<h3 id="org16b9453"><span class="section-number-3">2.1.</span> <a href="#org16b9453">Veritasium 真理元素</a></h3>
+<div id="outline-container-org75f9d6b" class="outline-3">
+<h3 id="org75f9d6b"><span class="section-number-3">2.1.</span> <a href="#org75f9d6b">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -819,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org03f5f0b" class="outline-3">
-<h3 id="org03f5f0b"><span class="section-number-3">2.2.</span> <a href="#org03f5f0b">各种剧</a></h3>
+<div id="outline-container-org574db01" class="outline-3">
+<h3 id="org574db01"><span class="section-number-3">2.2.</span> <a href="#org574db01">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -843,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1c459f6" class="outline-3">
-<h3 id="org1c459f6"><span class="section-number-3">2.3.</span> <a href="#org1c459f6">电影</a></h3>
+<div id="outline-container-orgcf09de7" class="outline-3">
+<h3 id="orgcf09de7"><span class="section-number-3">2.3.</span> <a href="#orgcf09de7">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -869,8 +871,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8e4e1d6" class="outline-2">
-<h2 id="org8e4e1d6"><span class="section-number-2">3.</span> <a href="#org8e4e1d6">快乐游戏</a></h2>
+<div id="outline-container-org7719407" class="outline-2">
+<h2 id="org7719407"><span class="section-number-2">3.</span> <a href="#org7719407">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -899,8 +901,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8406d9c" class="outline-2">
-<h2 id="org8406d9c"><span class="section-number-2">4.</span> <a href="#org8406d9c">宝藏博主</a></h2>
+<div id="outline-container-orgfa7d65b" class="outline-2">
+<h2 id="orgfa7d65b"><span class="section-number-2">4.</span> <a href="#orgfa7d65b">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -911,7 +913,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgb0a424d">
+<figure id="org08c9722">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -919,8 +921,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf264ad9" class="outline-2">
-<h2 id="orgf264ad9"><span class="section-number-2">5.</span> <a href="#orgf264ad9">有意思的</a></h2>
+<div id="outline-container-orga2f3d78" class="outline-2">
+<h2 id="orga2f3d78"><span class="section-number-2">5.</span> <a href="#orga2f3d78">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -944,8 +946,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb7d4bea" class="outline-3">
-<h3 id="orgb7d4bea"><span class="section-number-3">5.1.</span> <a href="#orgb7d4bea">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgb29d88c" class="outline-3">
+<h3 id="orgb29d88c"><span class="section-number-3">5.1.</span> <a href="#orgb29d88c">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -957,8 +959,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org7974bcb" class="outline-2">
-<h2 id="org7974bcb"><span class="section-number-2">6.</span> <a href="#org7974bcb">我想玩的</a></h2>
+<div id="outline-container-org3af2045" class="outline-2">
+<h2 id="org3af2045"><span class="section-number-2">6.</span> <a href="#org3af2045">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -980,8 +982,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-08 09:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-09 02:54</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-09 22:55</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-09 22:56</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
